Archive2/c9/91a93b74628495/output
main.cpp:1:11: warning: macro name is a reserved identifier [-Wreserved-id-macro]
  #define _CRT_SECURE_NO_WARNINGS
          ^
main.cpp:17:20: warning: extra ';' after member function definition [-Wextra-semi]
        pacient(){};
                   ^
main.cpp:30:9: warning: 'pacient' has virtual functions but non-virtual destructor [-Wnon-virtual-dtor]
        ~pacient(){
        ^
main.cpp:18:21: warning: declaration shadows a field of 'pacient' [-Wshadow]
        pacient(int colesterol, int tensiune_art, char * nume, char *prenume,
                    ^
main.cpp:8:13: note: previous declaration is here
        int colesterol;
            ^
main.cpp:18:58: warning: declaration shadows a field of 'pacient' [-Wshadow]
        pacient(int colesterol, int tensiune_art, char * nume, char *prenume,
                                                         ^
main.cpp:10:16: note: previous declaration is here
        char * nume;
               ^
main.cpp:18:70: warning: declaration shadows a field of 'pacient' [-Wshadow]
        pacient(int colesterol, int tensiune_art, char * nume, char *prenume,
                                                                     ^
main.cpp:11:16: note: previous declaration is here
        char * prenume;
               ^
main.cpp:19:17: warning: declaration shadows a field of 'pacient' [-Wshadow]
            int varsta, char * adresa, char *data_analiza)
                ^
main.cpp:12:13: note: previous declaration is here
        int varsta;
            ^
main.cpp:19:32: warning: declaration shadows a field of 'pacient' [-Wshadow]
            int varsta, char * adresa, char *data_analiza)
                               ^
main.cpp:13:16: note: previous declaration is here
        char * adresa;
               ^
main.cpp:19:46: warning: declaration shadows a field of 'pacient' [-Wshadow]
            int varsta, char * adresa, char *data_analiza)
                                             ^
main.cpp:14:16: note: previous declaration is here
        char * data_analiza;
               ^
main.cpp:23:13: error: use of undeclared identifier 'strcpy'
            strcpy((*this).nume, nume);
            ^
main.cpp:24:13: error: use of undeclared identifier 'strcpy'
            strcpy((*this).prenume, prenume);
            ^
main.cpp:26:13: error: use of undeclared identifier 'strcpy'
            strcpy((*this).adresa, adresa);
            ^
main.cpp:27:13: error: use of undeclared identifier 'strcpy'
            strcpy((*this).data_analiza, data_analiza);
            ^
main.cpp:33:13: error: use of undeclared identifier 'strcpy'
            strcpy(nume, "");
            ^
main.cpp:34:13: error: use of undeclared identifier 'strcpy'
            strcpy(prenume, "");
            ^
main.cpp:36:13: error: use of undeclared identifier 'strcpy'
            strcpy(adresa, "");
            ^
main.cpp:37:13: error: use of undeclared identifier 'strcpy'
            strcpy(data_analiza, "");
            ^
main.cpp:40:44: warning: ISO C++11 does not allow conversion from string literal to 'char *' [-Wwritable-strings]
        virtual char * get_name() { return "Este pacient"; }
                                           ^
main.cpp:75:6: warning: C++98 requires newline at end of file [-Wc++98-compat-pedantic]
    }
     ^
main.cpp:1:11: warning: macro is not used [-Wunused-macros]
  #define _CRT_SECURE_NO_WARNINGS
          ^
main.cpp:6:11: warning: 'pacient' has no out-of-line virtual method definitions; its vtable will be emitted in every translation unit [-Wweak-vtables]
    class pacient{
          ^
13 warnings and 8 errors generated.
